@@ -16,9 +16,9 @@
     <RepositoryUrl>https://github.com/Concurrency-Lab/ParallelHelper</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Description>ParallelHelper is a static code analyzer that helps to identify concurrency related issues. Moreover, it provides hints to improve the robustness of code with concurrency in mind.</Description>
-    <PackageReleaseNotes>- New Analyzer: PH_S034 - Async Lambda Inferred to Async Void
-- New Analyzer: PH_S035 - Blocking Async Method Invocation in Constructor</PackageReleaseNotes>
-    <Copyright>Copyright (C) 2022  Christoph Amrein</Copyright>
+    <PackageReleaseNotes>- Fixed Analyzer: PH_S032 - Fix NRE when re-throwing exceptions
+- Fixed Analyzer: PH_S032 - Fix false positives for caught exceptions</PackageReleaseNotes>
+    <Copyright>Copyright (C) 2022 - 2023  Christoph Amrein</Copyright>
     <PackageTags>C#, Parallel, Asynchronous, Concurrency, Bugs, Best Practices, TPL, Task, QC, Static Analysis, async, await</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
